- overflowing content text fixed

--- a/components/content/content.scss
+++ b/components/content/content.scss
@@ -20,7 +20,7 @@
     @extend .CONTENT-TEXT;
 
     width: 50%;
-    height: 440px;
+    // height: 440px;
     padding: 0px;
 
     column-count: 2;
